<resources>
    <string name="app_name">Android Tutorial</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_drawer">DrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_calculator">CalculatorActivity</string>
    <string name="title_activity_signature">SignatureActivity</string>
    <string name="title_activity_list">ListActivity</string>
    <string name="google_maps_key">AIzaSyA47Ut8R1m0Lq-u8kIB4mFp5UlUsEXva3c</string>
    <string name="title_activity_grid">GridActivity</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="action_search">Search</string>
    <string name="action_delete">Delete</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>
    <string name="slide_1_title">Hello Food!</string>
    <string name="slide_1_desc">The easiest way to order food from your favourite restaurant!</string>
    <string name="slide_2_title">Movie Tickets</string>
    <string name="slide_2_desc">Book movie tickets for your family and friends!</string>
    <string name="slide_3_title">Great Discounts</string>
    <string name="slide_3_desc">Best discounts on every single service we offer!</string>
    <string name="slide_4_title">World Travel</string>
    <string name="slide_4_desc">Book tickets of any transportation and travel the world!</string>
    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
    <string name="play_again">Play Again</string>
    <string name="title_activity_splash">@string/app_name</string>
    <string name="title_activity_navigation_drawer">NavigationDrawerActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_led_controll">LedControllActivity</string>
    <string name="title_activity_web_veiw">GIF Animation</string>
    <string name="title_activity_phone_call">PhoneCallActivity</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_web_view_in_app_browser">WebViewInAppBrowserActivity</string>
    <string name="action_bookmark">Book Mark</string>
    <string name="action_back">Back</string>
    <string name="action_forward">Forward</string>
    <string name="title_activity_browser">BrowserActivity</string>
    <string name="title_activity_speedometer">SpeedometerActivity</string>
    <string name="title_activity_qrcode">QRCodeActivity</string>
    <string name="title_activity_compass">CompassActivity</string>
    <string name="search_hint">Search</string>
    <string name="title_activity_count_down">CountDownActivity</string>
    <string name="stopwatch">Stop Watch</string>
    <string name="title_activity_gesture_detector">GestureDetectorActivity</string>
    <string name="title_activity_voice_recorder">VoiceRecorderActivity</string>
    <string name="title_activity_altitude">AltitudeActivity</string>
    <string name="title_activity_nfc">NFCActivity</string>
    <string name="repoUrl">https://github.com/pro100svitlo/Credit-Card-NFC-Reader#questions-and-help</string>
    <string name="tv_noNfc">There is no NFC module on this device</string>
    <string name="tv_tapYourCard">Please put your card to back panel of the phone</string>
    <string name="ad_progressBar_title">Scanning ...</string>
    <string name="ad_progressBar_mess">Please do not remove or move card during reading.</string>
    <string name="snack_unknown_bank_card">This is unknown bank card. Please, go to my github repo!</string>
    <string name="snack_doNotMoveCard">Please do not move card, try again !</string>
    <string name="snack_unknownEmv">Unknown EMV card</string>
    <string name="snack_lockedNfcCard">NFC is locked on this card.</string>
    <string name="ad_nfcTurnOn_title">NFC is turned off.</string>
    <string name="ad_nfcTurnOn_message">You need turn on NFC module for scanning. Wish turn on it now?</string>
    <string name="ad_nfcTurnOn_pos">Turn on</string>
    <string name="ad_nfcTurnOn_neg">Dismiss</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="title_activity_heartbeat">HeartBeatView</string>
    <string name="cheese_ipsum">Jarlsberg lancashire edam. Dolcelatte hard cheese brie st. agur blue
    cheese caerphilly bavarian bergkase cheese and biscuits mascarpone. Cheeseburger swiss bavarian
    bergkase cream cheese fromage frais cheesy feet port-salut airedale. St. agur blue cheese rubber
    cheese caerphilly cheddar cheesecake cream cheese manchego lancashire. Roquefort squirty cheese
    the big cheese.</string>
    <string name="checkin">Checkin</string>
    <string name="menu_settings">Settings</string>
    <string name="prepaid_recharge">Prepaid Recharge</string>
    <string name="enter_mobile_number">ENTER MOBILE NUMBER</string>
    <string name="own_number">Own Number</string>
    <string name="recent">Recent</string>
    <string name="phone_number">9782145901</string>
    <string name="action_info">Info</string>
    <string name="info_details">Open source custom view of a beating heart using scaling animation.</string>
    <string name="title_activity_fingerprint">FingerprintActivity</string>
    <string name="title_fingerprint">One-touch Sign In</string>
    <string name="desc_fingerprint">Please place your fingertip on the scanner to verify your identity</string>
    <string name="note">(Fingerprint sign in makes your app login much faster. Your device should have at least one fingerprint registered in device settings)</string>
    <string name="title_activity_home">Fingerprint</string>
    <string name="activity_home_desc">You have successfully logged in with fingerprint authentication</string>
    <string name="activity_home_note">Close and re-open the app to see the fingerprint auth screen again</string>
    <string name="title_activity_fire_base_notification">FireBaseNotificationActivity</string>
    <string name="title_activity_timeline">TimelineActivity</string>
    <string name="title_activity_screen_capture">ScreenCaptureActivity</string>
    <string name="title_activity_weather">WeatherActivity</string>
    <string name="title_activity_mqtt__iot_">MQTT_IOT_Activity</string>
    <string name="title_activity_login_signup">Login Signup</string>
    <string name="todo">Todo List</string>
    <string name="title_activity_card_form">CardFormActivity</string>
    <string name="title_activity_apkextract">APKExtractActivity</string>
    <string name="title_activity_accelerometer_play">AccelerometerPlayActivity</string>
    <string name="title_activity_bar_code_reader">BarCodeReaderActivity</string>
    <string name="title_activity_ocr__recognition">OCR_RecognitionActivity</string>
    <string name="title_activity_color_picker">ColorPickerActivity</string>
    <string name="title_activity_bottom_navigation">BottomNavigationActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_download_file">DownloadFileActivity</string>
    <string name="title_activity_thermometer">ThermometerActivity</string>
    <string name="title_activity_recycler_view">RecyclerViewActivity</string>
    <string name="title_activity_paginated_list_view">PaginatedListViewActivity</string>
    <string name="title_activity_socket">SocketActivity</string>
    <string name="title_activity_memory_info">MemoryInfoActivity</string>
    <string name="free_space">Free Space</string>
    <string name="free">Free</string>
    <string name="total">Total</string>
    <string name="title_activity_youtube_in_embeded_webview">YoutubeInEmbededWebviewActivity
    </string>
    <string name="title_activity_fire_base_chat">FireBaseChatActivity</string>
    <string name="send">Send</string>
    <string name="test_text_short">Hello!!</string>
    <string name="test_text_long">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit,
        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
    </string>
    <string name="test_time_text">10:30 AM</string>
    <string name="test_date_cell_text">2016/08/08</string>
    <string name="title_activity_retrofit_signup">RetrofitSignupActivity</string>
    <string name="title_activity_youtube_downloader">YoutubeDownloaderActivity</string>
    <string name="title_activity_fidget_spinner">FidgetSpinnerActivity</string>
    <string name="title_activity_door_sign_view">DoorSignViewActivity</string>
    <string name="title_activity_tic_tac_toe">TicTacToeActivity</string>
    <string name="title_activity_business_card">Business Card</string>
    <string name="status_start">You are X. Where would you like to go?</string>
    <string name="status_yourmove">Pick your next move.</string>
    <string name="status_computer_thinking">The computer is thinking...</string>
    <string name="status_draw">The game is a draw. Try again!</string>
    <string name="status_lost">You lost at tic tac toe to a computer.</string>
    <string name="status_won">You won at tic tac toe. Congratulations, this is a serious accomplishment!</string>
    <string name="button_pick_contact">Pick Contact</string>
    <string name="title_activity_image_filter_effects">ImageFilterEffectsActivity</string>
    <string name="none">None</string>
    <string name="autofix">Autofix</string>
    <string name="bw">Min/Max Color Intensity</string>
    <string name="brightness">Brightness</string>
    <string name="contrast">Contrast</string>
    <string name="crossprocess">Cross Process</string>
    <string name="documentary">Documentary</string>
    <string name="duotone">Duo Tone</string>
    <string name="filllight">Fill Light</string>
    <string name="fisheye">Fish Eye</string>
    <string name="flipvert">Flip Vertical</string>
    <string name="fliphor">Flip Horizontal</string>
    <string name="grain">Grain</string>
    <string name="grayscale">Grayscale</string>
    <string name="lomoish">Lomoish</string>
    <string name="negative">Negative</string>
    <string name="posterize">Posterize</string>
    <string name="rotate">Rotate</string>
    <string name="saturate">Saturate</string>
    <string name="sepia">Sepia</string>
    <string name="sharpen">Sharpen</string>
    <string name="temperature">Temperature</string>
    <string name="tint">Tint</string>
    <string name="vignette">Vignette</string>
    <string name="title_activity_sms">SMSActivity</string>
    <string name="title_activity_chat_firebase">ChatFirebaseActivity</string>
    <string name="title_activity_stop_watch">StopWatch</string>
    <string name="background">background</string>
    <string name="logo">logo</string>
    <string name="_01">00</string>
    <string name="colon">:</string>
    <string name="_50">00</string>
    <string name="h">H </string>
    <string name="m">M</string>
    <string name="s">S</string>
</resources>